--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@trpc/server": "^10.45.2",
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "express": "^4.21.2"
   },
   "devDependencies": {
