--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "dev backend": "ts-node-dev --rs src/index.ts",
-    "build backend": "rimraf dist && tsc --build tsconfig.json",
-    "start backend": "node dist/index.js",
+    "dev": "ts-node-dev --rs src/index.ts",
+    "build": "rimraf dist && tsc --build tsconfig.json",
+    "start": "node dist/index.js",
     "types": "tsc --noEmit --project tsconfig.json"
   },
   "dependencies": {
@@ -18,7 +18,6 @@
     "@types/express": "^5.0.0",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
