--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "f": "pnpm --filter @ideanick/frontend",
     "parDev": "pnpm -r -parallel dev",
     "parTypes": "pnpm -r -parallel types"
+  },
+  "devDependencies": {
+    "typescript": "^5.7.2"
   }
 }
