--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "@ideanick/frontend",
+  "name": "@teach-website/frontend",
   "private": true,
   "version": "1.0.0",
+  "skipLibCheck": false,
+  "strict": true,
+  "strictNullChecks": true,
+  "isolatedModules": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,8 +15,8 @@
     "types": "tsc --noEmit --project tsconfig.json && tsc --noEmit --project tsconfig.node.json"
   },
   "dependencies": {
-    "@ideanick/backend": "workspace:*",
-    "@tanstack/react-query": "^4.36.1",
+    "@teach-website/backend": "workspace:*",
+    "@teach-website/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "bootstrap": "^5.3.3",
