--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@teach-website/backend": "workspace:*",
-    "@teach-website/react-query": "^4.36.1",
+    "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "bootstrap": "^5.3.3",
