--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,17 @@
     "types": "tsc --noEmit --project tsconfig.json && tsc --noEmit --project tsconfig.node.json"
   },
   "dependencies": {
-    "@teach-website/backend": "workspace:*",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^4.36.1",
+    "@teach-website/backend": "workspace:*",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
-    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
-    "sass": "^1.83.0"
+    "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
