--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "strictNullChecks": true,
   "isolatedModules": false,
   "scripts": {
-    "dev": "ts-node-dev --rs src/index.ts",
+    "dev": "ts-node-dev --rs --exit-child src/index.ts",
     "build": "rimraf dist && tsc --build tsconfig.json",
     "start": "node dist/index.js",
     "types": "tsc --noEmit --project tsconfig.json",
