--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "pgt": "prisma generate type",
     "prepare": "pnpm pgt"
   },
-  "prisma":{
+  "prisma": {
     "schema": "./src/prisma/schema.prisma"
   },
   "dependencies": {
@@ -23,11 +23,17 @@
     "@trpc/server": "^10.45.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "passport-jwt": "^4.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
+    "dotenv": "^16.4.7",
     "prisma": "^6.4.1",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
