--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "zod": "^3.24.2"
   },
@@ -31,6 +33,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.16",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
     "dotenv": "^16.4.7",
